src/golden/cards/templates/nested/errors/test.golden/cannotSendToCard.fl
	card CannotSendToVar
		state 
			MyX x
		
		template top
			hold <- x => x

	card CannotSendToCardTemplate
		state 
			MyX x
		
		template top
			hold <- x => top
			